# src/api/routers/country.go
@@ -10,8 +10,10 @@ import (
 func Country(r *gin.RouterGroup) {
 	handler := handlers.Country{}
 	handlerDelete := handlers.CountryDelete{}
+	handlerUpdate := handlers.CountryUpdate{}
 	cfg := config.GetConfig()
 
 	r.POST("/c/create", middlewares.Authentication(cfg), handler.Create)
+	r.PUT("/c/update", middlewares.Authentication(cfg), handlerUpdate.Update)
 	r.DELETE("/c/delete", middlewares.Authentication(cfg), handlerDelete.Delete)
 }
